--- a/app/views/registrations/signup.erb
+++ b/app/views/registrations/signup.erb
@@ -3,5 +3,5 @@
   <p>Name: <input type = "text" name = "name" id = "name"></p>
   <p>Email: <input type = "text" name = "email" id = "email"></p>
   <p>Password: <input type = "text" name = "password" id = "password"></p>
-  <input type = "submit" id = "submit" name = "Sign Up">
+  <input type = "submit" id = "Sign Up" name = "Sign Up">
 </form>
